Fix routing of mouse wheel events while pointer is locked.

BUG=701965

Review-Url: https://codereview.chromium.org/2765903002
Cr-Commit-Position: refs/heads/master@{#459220}

Former-commit-id: 9a467e187757c5bdfd35488ebab382c7d59ee50b